# vastlint-python

./: .gitignore  DEVTO-ARTICLE.md  LICENSE  MEDIUM-ARTICLE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml
scripts/: bench.py  fetch-libs.sh
src/vastlint/: __init__.py  _library.py  errors.py  result.py
src/vastlint/native/: README.md
src/vastlint/native/darwin_amd64/: libvastlint.dylib
src/vastlint/native/darwin_arm64/: libvastlint.dylib
tests/: test_vastlint.py
tests/fixtures/: invalid.xml  valid.xml
